# BittyHTTP

./: .gitignore  CMakeLists.txt
src/: Options.h  SocketsCon.c  SocketsConWin.c  WebServer.c  WebServer.h
